--- a/Application/memegen-python/templates/grid.html
+++ b/Application/memegen-python/templates/grid.html
@@ -1,10 +1,33 @@
+
+{% if form_data.site_color %}
+    <body style="background-color:LightCyan"></body>
+    <div class="container-fluid text-center col-md-12">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                <p><a href="http://www.gluo.be"><img src="../static/images/gluo.png" alt="gluo logo"/></a></p>
+        <h2>Meme Generator</h2>
+    </body>
+{% else %}
+    <body style="background-color:Beige">
+    <div class="container-fluid text-center col-md-12">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                <p><a href="http://www.gluo.be"><img src="../static/images/gluo.png" alt="gluo logo"/></a></p>
+        <h2>Meme Generator</h2>
+
+    </body>
+{% endif %}
 {% if form_data.to_upload %}
     {% include  "image_upload.html" %}
 {% endif %}
 {% block body %}
+    <head>
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     {% for image in form_data.images %}
         <a href={{image.id_url}}>
-            <img src='{{image.img_url}}' width="256" height="256">
+            <img src='{{image.img_url}}' width="256" height="256" class="img-rounded">
         </a>
     {% endfor %}
+    </head>
 {% endblock %}
